--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     width: 100px;
     margin: 5px 5px;
     float: right;
+    overflow: auto;
 }
 
 .screen {
@@ -30,30 +31,36 @@ body {
     width: 150px;
     height: 25px;
     margin-left: 20px;
+    margin-top: 30px;
+    border: solid 1px black;
 }
 #display{
-    margin-top: 30px;
-    margin-right: 10px;
+    margin-top: 2px;
+    margin-right: 7px;
     margin-bottom: 2px;
     font-size: 18px;
 }
 .buttons{
     float: left;
-    margin-left: 35px;
+    margin-left: 20px;
     font-size: 30px;
 }
 .numbers{
-    border-radius: 50%;
-    width: 27px;
+    border-radius: 5px;
+    width: 30px;
     font-size: 18px;
+}
+ul{
+    margin-top: 9px;
 }
 .list{
     list-style: none;
     margin-right: 20px;
 }
-.placeholder{
-    width: 24px;
+.operator{
+    width: 45px;
     text-align: center;
     line-height: 17px;
-    border-radius: 50%;
+    border-radius: 5px;
+    background-color: burlywood;
 }
